==> ChibiOS/ChibiOS/os/hal/ports/LPC/LPC214x/hal_spi_lld.c <==
#include "hal.h"

void spi_lld_init(void) {

#if LPC214x_SPI_USE_SSP
  spiObjectInit(&SPID1);
  SPID1.ssp = SSPBase;
  SetVICVector(SPI1IrqHandler, LPC214x_SPI_SSP_IRQ_PRIORITY, SOURCE_SPI1);
#endif
}

void spi_lld_start(SPIDriver *spip) {

  if (spip->state == SPI_STOP) {
    /* Clock activation.*/
#if LPC214x_SPI_USE_SSP
    if (&SPID1 == spip) {
      PCONP = (PCONP & PCALL) | PCSPI1;
      VICIntEnable = INTMASK(SOURCE_SPI1);
    }
#endif
  }
  /* Configuration.*/
  spip->ssp->SSP_CR1  = 0;
  /* Emptying the receive FIFO, it happens to not be empty while debugging.*/
  while (spip->ssp->SSP_SR & SR_RNE)
    (void) spip->ssp->SSP_DR;
  spip->ssp->SSP_ICR  = ICR_RT | ICR_ROR;
  spip->ssp->SSP_CR0  = spip->config->cr0;
  spip->ssp->SSP_CPSR = spip->config->cpsr;
  spip->ssp->SSP_CR1  = CR1_SSE;
}

void spi_lld_stop(SPIDriver *spip) {

  if (spip->state != SPI_STOP) {
    spip->ssp->SSP_CR1  = 0;
    spip->ssp->SSP_CR0  = 0;
    spip->ssp->SSP_CPSR = 0;
#if LPC214x_SPI_USE_SSP
    if (&SPID1 == spip) {
      PCONP = (PCONP & PCALL) & ~PCSPI1;
      VICIntEnClear = INTMASK(SOURCE_SPI1);
    }
#endif
  }
}

void spi_lld_ignore(SPIDriver *spip, size_t n) {

  spip->rxptr = NULL;
  spip->txptr = NULL;
  spip->rxcnt = spip->txcnt = n;
  ssp_fifo_preload(spip);
  spip->ssp->SSP_IMSC = IMSC_ROR | IMSC_RT | IMSC_TX | IMSC_RX;
}

void spi_lld_exchange(SPIDriver *spip, size_t n,
                      const void *txbuf, void *rxbuf) {

  spip->rxptr = rxbuf;
  spip->txptr = txbuf;
  spip->rxcnt = spip->txcnt = n;
  ssp_fifo_preload(spip);
  spip->ssp->SSP_IMSC = IMSC_ROR | IMSC_RT | IMSC_TX | IMSC_RX;
}

void spi_lld_send(SPIDriver *spip, size_t n, const void *txbuf) {

  spip->rxptr = NULL;
  spip->txptr = txbuf;
  spip->rxcnt = spip->txcnt = n;
  ssp_fifo_preload(spip);
  spip->ssp->SSP_IMSC = IMSC_ROR | IMSC_RT | IMSC_TX | IMSC_RX;
}

void spi_lld_receive(SPIDriver *spip, size_t n, void *rxbuf) {

  spip->rxptr = rxbuf;
  spip->txptr = NULL;
  spip->rxcnt = spip->txcnt = n;
  ssp_fifo_preload(spip);
  spip->ssp->SSP_IMSC = IMSC_ROR | IMSC_RT | IMSC_TX | IMSC_RX;
}

uint16_t spi_lld_polled_exchange(SPIDriver *spip, uint16_t frame) {

  spip->ssp->SSP_DR = (uint32_t)frame;
  while ((spip->ssp->SSP_SR & SR_RNE) == 0)
    ;
  return (uint16_t)spip->ssp->SSP_DR;
}
